<resources>
    <string name="app_name">GameSuite</string>
    <string name="game1">Wordle</string>
    <string name="game2">Chess</string>
    <string name="game3">Solitaire</string>
    <string name="instrHead"><b>How to Play?</b></string>

    <!-- About -->
    <string name="aboutGame"><b>About Game</b></string>

    <!-- Wordle -->
    <string name="instrWordle1">Guess the word in <b>6</b> tries!!\n\nEach guess must be a <b>valid 5-letter</b> word. Click <b>Enter</b> to Submit.\n\nAfter each guess, the tile colors will change to show how close your guess was to the actual word.\n
    </string>
    <string name="instrWordle2"><b>Example:</b></string>
    <string name="instrWordle3">The letter within the GREEN box is in the word and in the correct spot.</string>
    <string name="instrWordle4">The letter within the YELLOW box is in the word but in the wrong spot.</string>
    <string name="instrWordle5">The letter within the GREY box is not in the word in any spot.</string>
    <string name="instrWordle6">A new word will be available each time you play!</string>
    <!-- maze -->
    <string name="finished_title">Congrats</string>

    <string name="finished_text">Level Cleared</string>
    <string name="level_select">Level Selected</string>
    <string name="finished_button">End Game</string>
    <string name="btn_newgame">New Game</string>
    <string name="btn_exit">Exit</string>

    <!-- chess -->
    <string name="instrPawn"><b>Pawns</b> only move forward. A pawn can move 2 spaces on its first move, but only 1 space after. Pawns move diagonally to take opponents. If a pawn reaches the opposite side of the board, it is promoted to a knight.</string>
    <string name="instrRook"><b>Rooks</b> move in a continuous line forwards, backwards or side-to-side.</string>
    <string name="instrKnight"><b>Knights</b> move in different orientations of the shape L.</string>
    <string name="instrBishop"><b>Bishops</b> move in a continuous diagonal in any direction.</string>
    <string name="instrQueen">The <b>Queen</b> moves in continuous diagonal and straight lines in all directions.</string>
    <string name="instrKing">The <b>King</b> can move one square at a time in any direction without coming under check.</string>
    <string name="instrCheck">A king is in <b>check</b> when an opponent piece can attack the king.</string>
    <string name="instrCheckmate">Putting an opponent king in <b>Checkmate</b> is the only way to win the game. A <b>Stalemate</b> is a tie which occurs when there are no legal moves for a player to make.</string>
</resources>