<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#7B94C5"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/instrHead"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/instrHead"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:background="#7B94C5"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instrWordle1"
            android:layout_marginTop="20dp" />

        <View style="@style/Divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instrWordle2"
            android:layout_marginVertical="10dp" />

        <TextView
            android:id="@+id/instrWordle3view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instrWordle3"
            android:textColor="@color/wordleGreen"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/instrWordle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instrWordle4"
            android:textColor="@color/wordleYellow"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/instrWordle5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instrWordle5"
            android:textColor="@color/wordleDark"
            android:layout_marginVertical="10dp" />

        <View style="@style/Divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instrWordle6"
            android:layout_marginVertical="10dp" />

    </LinearLayout>
</ScrollView>